--- a/.github/workflows/publish_docs_to_wiki.yml
+++ b/.github/workflows/publish_docs_to_wiki.yml
@@ -39,7 +39,8 @@ jobs:
           git clone https://"$USER_TOKEN"@github.com/"$OWNER"/"$REPOSITORY_NAME".wiki.git tmp_wiki
           echo "---debug info before rsync---"
           cat ./tmp_wiki/Home.md
-
+          echo "---github workspace---"
+          echo ${{ github.workspace }}
           rsync -av --delete ${{ github.workspace }} tmp_wiki/ --exclude .git
           cd tmp_wiki
           echo "---debug info after rsync---"
